# MultiworldLogic

./: .gitignore  Cargo.toml  README.md
logic/: area.py  extras.py  fill.py  gameitem.py  generate.py  itempool.py  location.py  main.py  requirements.py  search.py  settings.py  simple_world_locations.py  spoilerlog.py  world.json  world.py  world_items_count.py
src/: alias.rs  extra.rs  file.rs  fill.rs  lib.rs  requirements.rs  search.rs  util.rs  world.rs
