[package]
name = "randomizer-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
petgraph = "0.6.4"
bitvec = "~1.0.1"
cargo-expand = "1.0.74"
derive_more = "0.99.17"
serde = "1.0.192"
serde_json = { version = "1.0.108", features = [] }
serde_yaml = "0.9.27"
log = "0.4.20"
test-log = "0.2.13"
test-context = "0.1.4"
rand = "0.8.5"
rand_core = "0.6.4"
rand_pcg = "0.3.1"

[dev-dependencies]
env_logger = "*"
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}